--- a/kube-deployment.yml
+++ b/kube-deployment.yml
@@ -13,7 +13,7 @@ spec:
     app: words-db
   clusterIP: None
 ---
-apiVersion: apps/v1beta1
+apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: db
@@ -47,7 +47,7 @@ spec:
     app: words-api
   clusterIP: None
 ---
-apiVersion: apps/v1beta1
+apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: words
@@ -82,7 +82,7 @@ spec:
     app: words-web
   type: LoadBalancer
 ---
-apiVersion: apps/v1beta1
+apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: web
